--- a/src/local_pathfinding/test_plans/combined_collision.yaml
+++ b/src/local_pathfinding/test_plans/combined_collision.yaml
@@ -3,14 +3,20 @@ constants:
   tw_speed_kmph: &speed 18.0
 
 global_path:
+    tasks:
     - task: 1
       latitude: 48.25
       longitude: -130.10
+
     - task: 2
       latitude: 48.35
       longitude: -129.80
 
-sailbot_state:
+gps:
+    global_params:
+        tw_dir_deg: *dir
+        tw_speed_kmph: *speed
+
     state:
         speed: 13.0
         latitude: 48.20
@@ -23,9 +29,10 @@ wind_sensor:
 
 ais:
     # Multiple vessels with land obstacles - tests combined avoidance
-    - {id: 201, lat: 48.222, lon: -130.430, heading: 60.0, speed: 14.0, rot: 5, width: 2.0, height: 2.0}
-    - {id: 202, lat: 48.245, lon: -130.350, heading: 270.0, speed: 12.5, rot: -3, width: 1.5, height: 1.5}
-    - {id: 203, lat: 48.268, lon: -130.240, heading: 190.0, speed: 11.0, rot: 8, width: 3.0, height: 3.0}
+    vessels:
+        - [201, 48.222, -130.430, 60.0, 14.0, 5, 2.0, 2.0]
+        - [202, 48.245, -130.350, 270.0, 12.5, -3, 1.5, 1.5]
+        - [203, 48.268, -130.240, 190.0, 11.0, 8, 3.0, 3.0]
 
 land_mass:
     # Multiple land masses that create a narrow passage with vessel traffic
