--- a/.github/actions/action.yml
+++ b/.github/actions/action.yml
@@ -30,4 +30,4 @@ runs:
 
     - name: Run script inside sailbot workspace image
       shell: bash
-      run: docker compose -f .devcontainer/docker-compose.yml exec -T sailbot-workspace /bin/bash -c "export LINTER=${{ inputs.linter }} && cd /workspaces/sailbot_workspace && ${{ inputs.script }}.sh"
+      run: docker compose -f .devcontainer/docker-compose.yml exec -T sailbot-workspace /bin/bash -c "export LINTER=${{ inputs.linter }} && export MONGODB_URI='${{ env.MONGODB_URI }}' && cd /workspaces/sailbot_workspace && ${{ inputs.script }}.sh"
