--- a/src/global_launch/config/globals.yaml
+++ b/src/global_launch/config/globals.yaml
@@ -3,6 +3,7 @@
    ros__parameters:
       # Publishers' period (seconds): how often the publishers publish
       pub_period_sec: 1.0
+      test_plan: "basic.yaml"
 
 # local_pathfinding parameters
 mock_global_path:
@@ -15,7 +16,6 @@ mock_global_path:
 navigate_main:
    ros__parameters:
       path_planner: "rrtstar"
-      use_mock_land: false
 
 # controller parameters
 wingsail_ctrl_node:
