627 - Updated local transceiver to use new specific sensors (#709)
* Replaced Generic Sensors with Specific sensors in local transceiver implementation & test. Added specific sensors to Protofile

* Replaced generic sensors (data sensors) functions with specific temp, pH, salinity, and pressure sensor functions

* Added specific sensor tests

* Fixed bug in updateSensor for temperature

* Added serialization tests

* Fixed Serialization tests for Temp, Salinity, Pressure, pH

* Uncommented sendData for temp, pressure, salinity, pH

* Changed temp, pH, salinity, pressure protobuf to use packed array of float instead of respective complex objects

* Removed pressure upload in sendData test

* Added logging for bytes being sent

* Replaced magic numbers with constants

* Added a test for checking that echo server received data correctly (Currently FAILING)

* ROS2.distro auto entry

* Undid comment out

* Changed calls to specific data sensors

* Setup specific data sensor ROS topics and MongoDB collections

* Removed duplicate

* Commented out pressure sensor code (as we aren't using pressure sensors anymore)

* Commented out pressure sensor topics

* fix docs string for updateSensor functions

---------

Co-authored-by: Jing <128339540+Jng468@users.noreply.github.com>
Co-authored-by: lross03 <136214176+lross03@users.noreply.github.com>

--- a/src/network_systems/ros_info.yaml
+++ b/src/network_systems/ros_info.yaml
@@ -2,7 +2,10 @@ ros_topics:
   AIS_SHIPS: ais_ships
   BATTERIES: batteries
   DESIRED_HEADING: desired_heading
-  DATA_SENSORS: data_sensors
+  # DATA_SENSORS: data_sensors
+  TEMP_SENSORS: temp_sensors
+  PH_SENSORS: ph_sensors
+  SALINITY_SENSORS: salinity_sensors
   FILTERED_WIND_SENSOR: filtered_wind_sensor
   GLOBAL_PATH: global_path
   GPS: gps
@@ -14,10 +17,6 @@ ros_topics:
   SAIL_CMD: sail_cmd
   BOAT_SIM_INPUT: boat_sim_input
   RUDDER: rudder
-  TEMP_SENSORS: temp_sensors
-  PH_SENSORS: ph_sensors
-  SALINITY_SENSORS: salinity_sensors
-  PRESSURE_SENSORS: pressure_sensors
 
 ros_nodes:
   CAN_TRANSCEIVER: can_transceiver_node
