added global path to TestPlan

--- a/src/local_pathfinding/test_plans/basic.yaml
+++ b/src/local_pathfinding/test_plans/basic.yaml
@@ -14,6 +14,7 @@ ais:
   - {id: 4, lat: 48.1970229368345, lon: -128.93710143805356, heading: 4.0, speed: 10.0, rot: -30, width: 4.0, height: 4.0}
   - {id: 5, lat: 48.51027819947852, lon: -126.15925374786544, heading: 5.0, speed: 5.0, rot: 20, width: 5.0, height: 5.0}
 
+# [lon, lat]
 land:
   - [[-123.208923,49.284647],
     [-123.209782,49.282744],
@@ -30,3 +31,8 @@ land:
     [-123.226604,49.272979],
     [-123.224287,49.275667],
     [-123.225403,49.278187]]
+
+global_path:
+  waypoints:
+    - {latitude: 48.158391, longitude: -130.253906}
+    - {latitude: 48.121368, longitude: -137.022955}
